--- a/backend/files/html/contact.html
+++ b/backend/files/html/contact.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About-Braille</title>
-    <link rel="stylesheet" href="styles.css" type = "text/css"></head>
+    <link rel="stylesheet" href="../css/styles.css" type = "text/css">
+    <script src="scripts/script.js"></script>
 </head>
 <body>
     <nav class="navbar">
