--- a/backend/files/html/about.html
+++ b/backend/files/html/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About-Braille</title>
     <link rel="stylesheet" href="../css/styles.css" type = "text/css">
+    <script src="scripts/script.js"></script>
 </head>
 <body>
     <div class="banner">
