--- a/backend/files/html/contact.html
+++ b/backend/files/html/contact.html
@@ -23,11 +23,11 @@
         <form class="form" action="#">
             <div id="fname">
                 <p>First name</p>
-                <input type="text" id=>
+                <input type="text" id="lname-input">
             </div>
             <div id="lname">
                 <p>Last name</p>
-                <input type="text" id="lname">
+                <input type="text" id="lname-input">
             </div>
             <div id="email">
                 <p>Email address</p>
@@ -35,9 +35,11 @@
             </div>
             <div id="feedback">
                 <p>Type in your feedback or comment.</p>
-                <textarea>Type here...</textarea>
+                <textarea id="feedback-input">Type here...</textarea>
                 <br>
-                <input type="submit">
+                <a href="mailto:carolzjwang@gmail.com,eysiao3@gmail.com,gaoabigail0@gmail.com,tylerjamesgu@gmail.com">
+                    <span id="bg-span"></span><span id="hover-span"></span>Submit
+                </a>
             </div>
         </form>
         </div>
