--- a/backend/files/html/main.html
+++ b/backend/files/html/main.html
@@ -18,7 +18,7 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    <section class="content">
+    <section class="content" id="home">
         <div class="body-content" id="top-margin">
             <h1>Braille Transcriber</h1>
             <form class="translate" action="#">
@@ -36,10 +36,10 @@
                                 </div>
                             </div>
                             <div class="translate-main-box">
-                                <a href="" id="clear-button">
+                                <a onclick="document.getElementById('input-text-area').value = ''" id="clear-button">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="none" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M18 6L6 18M6 6l12 12"/></svg>
                                 </a>
-                                <textarea></textarea>
+                                <textarea id="input-text-area"></textarea>
                             </div>
                         </div>
                         <div class="translate-right">
