--- a/backend/files/html/about.html
+++ b/backend/files/html/about.html
@@ -17,10 +17,23 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
-        <section class="content-about">
-            <h1>Braille Translator</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam, modi.</p>
-        </section>
+        <div class="content" id="about">
+            <div class="body-content">
+                <section class="content-about">
+                    <h1>Braille Transcriber</h1>
+                    <div id="info-para">
+                        <div>    
+                            <p>Our transcriber handles the two standardized forms of English Braille; Grade 1 and Grade 2. Grade 1 braille is used by most beginners, and is an almost exact letter-to-letter transcription. This website’s Grade 1 braille is completely accurate. 
+                            </p>
+                            <p>Grade 2 braille is used by most experienced braille readers, using abbreviations and contractions to speed up the reading process. It must be said that currently, a completely accurate Grade 2 braille transcription can only be done by a human transcriber, but this transcriber has been our best attempt at an accurate transcription, including all formalized contractions and abbreviations, with sub rules for uninterrupted syllables and pronunciation. 
+                            </p>
+                            <p>We hope this can be helpful in making texts more accessible in ways other than audio (which can be slower than reading), and please leave a message on the Contact page if you notice an obvious error, and we will try to fix the mistake. Thank you! 
+                            </p>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </div>
     </div>
 </body>
 </html>
