--- a/backend/files/html/contact.html
+++ b/backend/files/html/contact.html
@@ -35,7 +35,7 @@
             </div>
             <div id="feedback">
                 <p>Type in your feedback or comment.</p>
-                <textarea id="feedback-input">Type here...</textarea>
+                <textarea id="feedback-input" onfocus="this.value=''">Type here...</textarea>
                 <br>
                 <a href="mailto:carolzjwang@gmail.com,eysiao3@gmail.com,gaoabigail0@gmail.com,tylerjamesgu@gmail.com">
                     <span id="bg-span"></span><span id="hover-span"></span>Submit
