--- a/backend/files/html/team.html
+++ b/backend/files/html/team.html
@@ -18,12 +18,14 @@
     </nav>
     <section class="content-contact">
         <h1>Our Team</h1>
-        <p id="contact-para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam, modi.</p>
+        <div class="content">
+            <div class="body-content">
+                <p id="contact-para">We are four high school students completing this project for a hackathon. Most of us are new to webdev hackathons, but we all have coding experience. For the time limit of this hackathon, we were unable to incorporate all the grammar exceptions of braille, but we will continue improving this transcriber to make it as accurate as possible. Thanks for visiting!</p>
+            </div>
+        </div>
     </section>
     <div class="portfolio">
-        <section id="abigail">
-            <div>Abigail Gao</div>
-        </section>
+        <section id="abigail"></section>
         <section id="carol"></section>
         <section id="eva"></section>
         <section id="tyler"></section>
