--- a/backend/files/html/main.html
+++ b/backend/files/html/main.html
@@ -22,7 +22,7 @@
         <div class="body-content" id="top-margin">
             <h1>Braille Transcriber</h1>
             <form class="translate" action="#">
-                <p>Type in the text you would like to translate in the form below</p>
+                <p>Type in the text you would like to transcribe in the form below:</p>
                 <div class ="translate-main">
                     <a href="#" id="translate-submit"><span></span>></a>
                         <div class="translate-left">
