--- a/backend/files/html/about.html
+++ b/backend/files/html/about.html
@@ -29,6 +29,19 @@
                             </p>
                             <p>We hope this can be helpful in making texts more accessible in ways other than audio (which can be slower than reading), and please leave a message on the Contact page if you notice an obvious error, and we will try to fix the mistake. Thank you! 
                             </p>
+                            <p>Below are links used to make the transcriber:
+
+                                <a href="https://codepoints.net/braille_patterns?lang=en">https://codepoints.net/braille_patterns?lang=en</a>
+                                <a href="https://www.semanticscholar.org/paper/Braille-8-%E2%80%94-The-unified-braille-Unicode-system%3A-an-Garg/009bbae3eb76b72f263ccf225badac825cde48a8">https://www.semanticscholar.org/paper/Braille-8-%E2%80%94-The-unified-braille-Unicode-system%3A-an-Garg/009bbae3eb76b72f263ccf225badac825cde48a8</a>
+                                <a href="https://www.teachingvisuallyimpaired.com/uploads/1/4/1/2/14122361/ueb_braille_chart.pdf">https://www.teachingvisuallyimpaired.com/uploads/1/4/1/2/14122361/ueb_braille_chart.pdf</a>
+                                <a href="https://iceb.org/Rules%20of%20Unified%20English%20Braille%202013%20(linked).pdf">https://iceb.org/Rules%20of%20Unified%20English%20Braille%202013%20(linked).pdf</a>
+                                <br>
+                                Here is a good YouTube series for anyone attempting to learn Grade 2 braille:
+                                <a href="https://www.youtube.com/watch?v=g9hUmlXyabk&list=PL8E69D0C990DFC299&ab_channel=InOneLesson">https://www.youtube.com/watch?v=g9hUmlXyabk&list=PL8E69D0C990DFC299&ab_channel=InOneLesson</a>
+                                <br>
+                                Special thanks to the thirteen webpages of braille rules that made me cry:
+                                <a href="http://www.brl.org/refdesk/rules/index.html">http://www.brl.org/refdesk/rules/index.html</a>
+                            </p>
                         </div>
                     </div>
                 </section>
